syntax = "proto3";

package booking;

import "buf/validate/validate.proto";
import "common/pagination.proto";
import "common/sorting.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sklyar/ad-booking/backend/api/gen/booking";

service ContactPersonService {
  rpc Create(CreatePersonRequest) returns (CreatePersonResponse);
  rpc Update(UpdatePersonRequest) returns (UpdatePersonResponse);
  rpc Delete(DeletePersonRequest) returns (google.protobuf.Empty);
  rpc Get(GetPersonRequest) returns (GetPersonResponse);
  rpc List(ListPersonRequest) returns (ListPersonResponse);
}

message CreatePersonRequest {
  string name = 1 [(buf.validate.field).required = true];
  string vk_id = 2 [(buf.validate.field).required = true];
}

message CreatePersonResponse {
  ContactPerson contact_person = 1;
}

message UpdatePersonRequest {
  uint64 id = 1 [(buf.validate.field).required = true];
  optional string name = 2;
  optional string vk_id = 3;
}

message UpdatePersonResponse {
  ContactPerson contact_person = 1;
}

message DeletePersonRequest {
  uint64 id = 1 [(buf.validate.field).required = true];
}

message GetPersonRequest {
  uint64 id = 1 [(buf.validate.field).required = true];
}

message GetPersonResponse {
  ContactPerson contact_person = 1;
}

message ListPersonRequest {
  common.Pagination pagination = 1;
  common.Sorting sorting = 2;

  optional string name = 3;
  optional string vk_id = 4;
}

message ListPersonResponse {
  repeated ContactPerson data = 1;
}

message ContactPerson {
  uint64 id = 1;
  string name = 2;
  string vk_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
